fix menu on mobile

--- a/styles/global.less
+++ b/styles/global.less
@@ -51,12 +51,12 @@ body {
 .hidden {
   &.md {
     @media (min-width: @screen-md) {
-      display: none;
+      display: none !important;
     }
   }
   &.md-max {
     @media (max-width: @screen-md-max) {
-      display: none;
+      display: none !important;
     }
   }
 }
